fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__coin__tests__coin_by_id_query_gql_output.snap
---
source: fuel-client/src/client/schema/coin.rs
assertion_line: 181
expression: operation.query

---
query Query($_0: HexStringUtxoId!) {
  coin(utxoId: $_0) {
    amount
    blockCreated
    color
    utxoId
    maturity
    owner {
      address
    }
    status
  }
}

